# learning_deepin-deb-installer

./: CMakeLists.txt  README  debinstaller.cpp  debinstaller.h  debinstallworker.cpp  debinstallworker.h  deblistmodel.cpp  deblistmodel.h  debpackage.cpp  debpackage.h  filechoosewidget.cpp  filechoosewidget.h  main.cpp  mdm_deb_installer.desktop  multipleinstallpage.cpp  multipleinstallpage.h  packagelistview.cpp  packagelistview.h  packageslistdelegate.cpp  packageslistdelegate.h  packagesmanager.cpp  packagesmanager.h  singleinstallpage.cpp  singleinstallpage.h
resources/: resources.qrc
